change prompt and env.c dir.c globl var

--- a/alphaben/Makefile
+++ b/alphaben/Makefile
@@ -6,30 +6,40 @@
 #    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/02/28 20:02:27 by ebennamr         ###   ########.fr        #
+#    Updated: 2023/03/01 18:42:57 by ebennamr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 ######### Variale Block  ################
 CC = cc
 FLAGS = #-Wall -Werror -Wextra
-LIB = -lreadline -L libft -lft
-SRC = minishell.c string.c tokenizer.c tokenizer_util.c
+LIB = -lreadline
+SRC = minishell.c string.c tokenizer.c tokenizer_util.c\
+		dir.c env.c 
 OBJ = $(SRC:.c=.o)
+LIBFT = ./libft/libft.a
 
 NAME = minishell
 
 ############# Target ##############
 all : $(NAME)
 
-$(NAME) : $(OBJ)
-		$(CC) $(FLAGS) $(LIB) $(OBJ) -o $(NAME)
+$(NAME) : $(OBJ) $(LIBFT)
+		$(CC) $(FLAGS) $(LIB) $(LIBFT) $(OBJ) -o $(NAME)
+
 %.o: %.c
 	$(CC) $(FLAGS) -c $< -o $@
+
+$(LIBFT) :
+	make -C ./libft/
+
 clean :
-	cd libft ; rm *.o
-	cd ..
+	make fclean -C ./libft/
 	rm $(OBJ)
 
 fclean : clean
-		rm (NAME)
+	rm $(NAME)
+
+re : fclean all
+
+.PHONY : all clean fclean re
