--- a/ALIEN-MEGA/Makefile
+++ b/ALIEN-MEGA/Makefile
@@ -6,7 +6,7 @@
 #    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/01 23:28:34 by reben-ha         ###   ########.fr        #
+#    Updated: 2023/03/02 15:25:00 by reben-ha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,12 +16,16 @@ CC = cc
 
 FLAGS = #-Wall -Werror -Wextra
 
-LIB = -lreadline
+RL_PATH=$(shell brew --prefix readline)
+
+LIB = -L $(RL_PATH)/lib -lreadline
 
 SRC = minishell.c \
 		string.c \
 		./lexer/tokenizer.c \
 		./lexer/tokenizer_util.c \
+		./utils/pwd.c \
+		./utils/env.c
 
 OBJ = $(SRC:.c=.o)
 
@@ -33,7 +37,7 @@ $(NAME) : $(OBJ) $(LIBFT)
 	$(CC) $(FLAGS) $(LIBFT) $(LIB) $(OBJ) -o $(NAME)
 
 %.o: %.c
-	$(CC) $(FLAGS) -c $< -o $@
+	$(CC) $(FLAGS) -I $(RL_PATH)/include -c $< -o $@
 
 $(LIBFT) :
 	make -C libft
