--- a/alphaben/Makefile
+++ b/alphaben/Makefile
@@ -3,33 +3,52 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
+#    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/02/28 20:02:27 by ebennamr         ###   ########.fr        #
+#    Updated: 2023/03/02 15:25:00 by reben-ha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-######### Variale Block  ################
-CC = cc
-FLAGS = #-Wall -Werror -Wextra
-LIB = -lreadline -L libft -lft
-SRC = minishell.c string.c tokenizer.c tokenizer_util.c
-OBJ = $(SRC:.c=.o)
-
 NAME = minishell
 
-############# Target ##############
+CC = cc
+
+FLAGS = #-Wall -Werror -Wextra
+
+RL_PATH=$(shell brew --prefix readline)
+
+LIB = -L $(RL_PATH)/lib -lreadline
+
+SRC = minishell.c \
+		string.c \
+		./lexer/tokenizer.c \
+		./lexer/tokenizer_util.c \
+		./utils/pwd.c \
+		./utils/env.c
+
+OBJ = $(SRC:.c=.o)
+
+LIBFT = ./libft/libft.a
+
 all : $(NAME)
 
-$(NAME) : $(OBJ)
-		$(CC) $(FLAGS) $(LIB) $(OBJ) -o $(NAME)
+$(NAME) : $(OBJ) $(LIBFT)
+	$(CC) $(FLAGS) $(LIBFT) $(LIB) $(OBJ) -o $(NAME)
+
 %.o: %.c
-	$(CC) $(FLAGS) -c $< -o $@
+	$(CC) $(FLAGS) -I $(RL_PATH)/include -c $< -o $@
+
+$(LIBFT) :
+	make -C libft
+
 clean :
-	cd libft ; rm *.o
-	cd ..
-	rm $(OBJ)
+	rm -f $(OBJ)
+	make fclean -C libft
 
 fclean : clean
-		rm (NAME)
+	rm -f $(NAME)
+
+re : fclean all
+
+.PHONY : all clean fclean re
