--- a/alphaben/.vscode/settings.json
+++ b/alphaben/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"*.excalidraw": "json",
 		"*.excalidrawlib": "json",
-		"libft.h": "c"
-	}
+		"libft.h": "c",
+		"minishell.h": "c"
+	},
+	"C_Cpp.errorSquiggles": "disabled"
 }
