--- a/alphaben/Makefile
+++ b/alphaben/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
+#    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/02 21:39:53 by reben-ha         ###   ########.fr        #
+#    Updated: 2023/03/03 19:15:18 by ebennamr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,8 @@ SRC = minishell.c \
 		./utils/pwd.c \
 		./utils/env.c \
 		./parser/parser.c \
-		./parser/tree_utils.c
+		./parser/tree_utils.c\
+		./utils/env_util.c
 
 OBJ = $(SRC:.c=.o)
 
