--- a/alphaben/Makefile
+++ b/alphaben/Makefile
@@ -6,7 +6,7 @@
 #    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/03 19:15:18 by ebennamr         ###   ########.fr        #
+#    Updated: 2023/03/04 18:12:08 by ebennamr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,7 +25,8 @@ SRC = minishell.c \
 		./utils/env.c \
 		./parser/parser.c \
 		./parser/tree_utils.c\
-		./utils/env_util.c
+		./utils/env_util.c\
+		./lexer/lexer.c 
 
 OBJ = $(SRC:.c=.o)
 
@@ -56,3 +57,4 @@ fclean : clean
 re : fclean all
 
 .PHONY : all clean fclean re
+
