add export function && sort_mat const.h

--- a/alphaben/Makefile
+++ b/alphaben/Makefile
@@ -6,7 +6,7 @@
 #    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/04 18:12:08 by ebennamr         ###   ########.fr        #
+#    Updated: 2023/03/06 18:35:19 by ebennamr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,9 @@ SRC = minishell.c \
 		./parser/parser.c \
 		./parser/tree_utils.c\
 		./utils/env_util.c\
-		./lexer/lexer.c 
+		./utils/export.c\
+		./utils/export_utils.c\
+		./lexer/lexer.c
 
 OBJ = $(SRC:.c=.o)
 
