--- a/ALIEN-MEGA/Makefile
+++ b/ALIEN-MEGA/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
+#    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/06 18:35:19 by ebennamr         ###   ########.fr        #
+#    Updated: 2023/03/08 14:44:35 by reben-ha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,6 +24,7 @@ SRC = minishell.c \
 		./utils/pwd.c \
 		./utils/env.c \
 		./parser/parser.c \
+		./parser/manage_tree.c \
 		./parser/tree_utils.c\
 		./utils/env_util.c\
 		./utils/export.c\
