--- a/alphaben/Makefile
+++ b/alphaben/Makefile
@@ -6,7 +6,7 @@
 #    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/06 18:35:19 by ebennamr         ###   ########.fr        #
+#    Updated: 2023/03/08 19:20:15 by ebennamr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,10 +24,12 @@ SRC = minishell.c \
 		./utils/pwd.c \
 		./utils/env.c \
 		./parser/parser.c \
+		./parser/manage_tree.c \
 		./parser/tree_utils.c\
 		./utils/env_util.c\
 		./utils/export.c\
 		./utils/export_utils.c\
+		./utils/unset.c\
 		./lexer/lexer.c
 
 OBJ = $(SRC:.c=.o)
