--- a/ALIEN-MEGA/Makefile
+++ b/ALIEN-MEGA/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
+#    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/08 17:34:36 by reben-ha         ###   ########.fr        #
+#    Updated: 2023/03/08 20:26:27 by ebennamr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,7 +31,8 @@ SRC = minishell.c \
 		./utils/env_util.c \
 		./utils/export.c \
 		./utils/export_utils.c \
-		./lexer/lexer.c
+		./lexer/lexer.c \
+		./utils/unset.c
 
 OBJ = $(SRC:.c=.o)
 
