--- a/alphaben/Makefile
+++ b/alphaben/Makefile
@@ -6,7 +6,7 @@
 #    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/08 19:20:15 by ebennamr         ###   ########.fr        #
+#    Updated: 2023/03/08 20:25:28 by ebennamr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,7 +25,9 @@ SRC = minishell.c \
 		./utils/env.c \
 		./parser/parser.c \
 		./parser/manage_tree.c \
-		./parser/tree_utils.c\
+		./parser/tree_utils.c \
+		./built-in/echo.c \
+		./built-in/exit.c \
 		./utils/env_util.c\
 		./utils/export.c\
 		./utils/export_utils.c\
