add lexer util and cost.h add some macro

--- a/alphaben/Makefile
+++ b/alphaben/Makefile
@@ -6,7 +6,7 @@
 #    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/09 18:38:11 by ebennamr         ###   ########.fr        #
+#    Updated: 2023/03/10 19:55:16 by ebennamr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,7 +34,8 @@ SRC = minishell.c \
 		./utils/export_utils.c\
 		./utils/unset.c\
 		./utils/helper.c\
-		./lexer/lexer.c
+		./lexer/lexer.c\
+		./lexer/lexer_util.c
 
 OBJ = $(SRC:.c=.o)
 
