--- a/alphaben/.vscode/settings.json
+++ b/alphaben/.vscode/settings.json
@@ -3,7 +3,8 @@
 		"*.excalidraw": "json",
 		"*.excalidrawlib": "json",
 		"libft.h": "c",
-		"minishell.h": "c"
+		"minishell.h": "c",
+		"signal.h": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
