--- a/ALIEN-MEGA/libft/Makefile
+++ b/ALIEN-MEGA/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/18 16:20:52 by reben-ha          #+#    #+#              #
-#    Updated: 2023/03/01 21:42:55 by reben-ha         ###   ########.fr        #
+#    Updated: 2023/03/23 14:51:30 by reben-ha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,6 +50,7 @@ SRC = ft_atoi.c \
 		ft_strdup.c \
 		ft_striteri.c \
 		ft_strjoin.c \
+		ft_strtrim.c \
 		ft_strlcat.c \
 		ft_strlcpy.c \
 		ft_strlen.c \
