--- a/ALIEN-MEGA/Makefile
+++ b/ALIEN-MEGA/Makefile
@@ -6,7 +6,7 @@
 #    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/20 21:10:57 by reben-ha         ###   ########.fr        #
+#    Updated: 2023/03/23 18:09:44 by reben-ha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,6 +50,14 @@ RL_PATH=$(shell brew --prefix readline)
 LIB = -L $(RL_PATH)/lib -lreadline
 
 all : $(NAME)
+	@echo "\033[1m\033[35m"
+	@printf "__  __ _____ _   _ _____  _____ _    _ ______ _      _      \n"
+	@printf "|  \/  |_   _| \ | |_   _|/ ____| |  | |  ____| |    | |     \n"
+	@printf "| \  / | | | |  \| | | | | (___ | |__| | |__  | |    | |     \n"
+	@printf "| |\/| | | | | . \` | | |  \___ \|  __  |  __| | |    | |     \n"
+	@printf "| |  | |_| |_| |\  |_| |_ ____) | |  | | |____| |____| |____ \n"
+	@printf "|_|  |_|_____|_| \_|_____|_____/|_|  |_|______|______|______|\n"
+	@echo "\033[0m"
 
 $(NAME) : $(OBJ) $(LIBFT)
 	$(CC) $(FLAGS) $(LIBFT) $(LIB) $(OBJ) -o $(NAME)
