--- a/Minishell_final/Makefile
+++ b/Minishell_final/Makefile
@@ -6,7 +6,7 @@
 #    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/25 23:16:52 by reben-ha         ###   ########.fr        #
+#    Updated: 2023/03/26 18:37:14 by reben-ha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -55,12 +55,37 @@ LIB = -L $(RL_PATH)/lib -lreadline
 
 all : $(NAME)
 	@echo "\033[1m\033[35m"
-	@printf "__  __ _____ _   _ _____  _____ _    _ ______ _      _      \n"
-	@printf "|  \/  |_   _| \ | |_   _|/ ____| |  | |  ____| |    | |     \n"
-	@printf "| \  / | | | |  \| | | | | (___ | |__| | |__  | |    | |     \n"
-	@printf "| |\/| | | | | . \` | | |  \___ \|  __  |  __| | |    | |     \n"
-	@printf "| |  | |_| |_| |\  |_| |_ ____) | |  | | |____| |____| |____ \n"
-	@printf "|_|  |_|_____|_| \_|_____|_____/|_|  |_|______|______|______|\n"
+	@printf " ███▄ ▄███▓ ██▓ ███▄    █  ██▓  ██████  ██░ ██ ▓█████  ██▓     ██▓    \n"
+	@sleep 0.3;
+	@printf "▓██▒▀█▀ ██▒▓██▒ ██ ▀█   █ ▓██▒▒██    ▒ ▓██░ ██▒▓█   ▀ ▓██▒    ▓██▒    \n"
+	@sleep 0.3;
+	@printf "▓██    ▓██░▒██▒▓██  ▀█ ██▒▒██▒░ ▓██▄   ▒██▀▀██░▒███   ▒██░    ▒██░    \n"
+	@sleep 0.3;
+	@printf "▒██    ▒██ ░██░▓██▒  ▐▌██▒░██░  ▒   ██▒░▓█ ░██ ▒▓█  ▄ ▒██░    ▒██░    \n"
+	@sleep 0.3;
+	@printf "▒██▒   ░██▒░██░▒██░   ▓██░░██░▒██████▒▒░▓█▒░██▓░▒████▒░██████▒░██████▒\n"
+	@sleep 0.3;
+	@printf "░ ▒░   ░  ░░▓  ░ ▒░   ▒ ▒ ░▓  ▒ ▒▓▒ ▒ ░ ▒ ░░▒░▒░░ ▒░ ░░ ▒░▓  ░░ ▒░▓  ░\n"
+	@sleep 0.3;
+	@printf "░  ░   ░  ░ ▒ ░░ ░░   ░ ▒░ ▒ ░░ ░▒  ░ ░ ▒ ░▒░ ░ ░ ░  ░░ ░ ▒  ░░ ░ ▒  ░\n"
+	@sleep 0.3;
+	@printf "░      ░    ▒ ░   ░   ░ ░  ▒ ░░  ░  ░   ░  ░░ ░   ░  ░░ ░ ░     ░ ░   \n"
+	@sleep 0.3;
+	@printf "       ░    ▒           ░  ▒ ░░     ░   ░  ░  ░   ░  ░░   ░  ░    ░  ░\n"
+	@printf "       ░    ▒           ░  ▒   ______   ░     ░      ░░\n"
+	@printf "       ░    ▒           ░   .-|      |-.      ░      ░░\n"
+	@printf "       ░    ▒           ░  /            \     ░        \n"
+	@printf "       ░    ▒  _        ░ |              |    ░     _  \n"
+	@printf "       ░    ▒ ( \       ░ |,  .-.  .-.  ,|    ░    / ) \n"
+	@printf "       ░    ▒  > +=._     | )(__/  \__)( |     _.=+ <  \n"
+	@printf "       ░    ▒ (_/+=._+=._ |/     /\     \| _.=+_.=+\_) \n"
+	@printf "            ▒        +=._ (_     ^^     _)+_.=+        \n"
+	@printf "            ▒            +=\__|IIIIII|__/=+            \n"
+	@printf "            ▒           _.=+| \IIIIII/ |+=._           \n"
+	@printf "            ▒ _     _.=+_.=+\          /+=._+=._     _ \n"
+	@printf "            ▒( \_.=+_.=+     \________/     +=._+=._/ )\n"
+	@printf "              > _.=+                            +=._ < \n"
+	@printf "             (_/                                    \_)\n"
 	@echo "\033[0m"
 
 $(NAME) : $(OBJ) $(LIBFT)
