--- a/Minishell_Hootgame/Makefile
+++ b/Minishell_Hootgame/Makefile
@@ -6,7 +6,7 @@
 #    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/27 02:42:06 by reben-ha         ###   ########.fr        #
+#    Updated: 2023/03/28 18:43:22 by reben-ha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -107,40 +107,40 @@ RL_PATH=$(shell brew --prefix readline)
 LIB = -L $(RL_PATH)/lib -lreadline
 
 all : $(NAME)
-	@echo "\033[1m\033[35m"
-	@printf " ███▄ ▄███▓ ██▓ ███▄    █  ██▓  ██████  ██░ ██ ▓█████  ██▓     ██▓    \n"
-	@sleep 0.3;
-	@printf "▓██▒▀█▀ ██▒▓██▒ ██ ▀█   █ ▓██▒▒██    ▒ ▓██░ ██▒▓█   ▀ ▓██▒    ▓██▒    \n"
-	@sleep 0.3;
-	@printf "▓██    ▓██░▒██▒▓██  ▀█ ██▒▒██▒░ ▓██▄   ▒██▀▀██░▒███   ▒██░    ▒██░    \n"
-	@sleep 0.3;
-	@printf "▒██    ▒██ ░██░▓██▒  ▐▌██▒░██░  ▒   ██▒░▓█ ░██ ▒▓█  ▄ ▒██░    ▒██░    \n"
-	@sleep 0.3;
-	@printf "▒██▒   ░██▒░██░▒██░   ▓██░░██░▒██████▒▒░▓█▒░██▓░▒████▒░██████▒░██████▒\n"
-	@sleep 0.3;
-	@printf "░ ▒░   ░  ░░▓  ░ ▒░   ▒ ▒ ░▓  ▒ ▒▓▒ ▒ ░ ▒ ░░▒░▒░░ ▒░ ░░ ▒░▓  ░░ ▒░▓  ░\n"
-	@sleep 0.3;
-	@printf "░  ░   ░  ░ ▒ ░░ ░░   ░ ▒░ ▒ ░░ ░▒  ░ ░ ▒ ░▒░ ░ ░ ░  ░░ ░ ▒  ░░ ░ ▒  ░\n"
-	@sleep 0.3;
-	@printf "░      ░    ▒ ░   ░   ░ ░  ▒ ░░  ░  ░   ░  ░░ ░   ░  ░░ ░ ░     ░ ░   \n"
-	@sleep 0.3;
-	@printf "       ░    ▒           ░  ▒ ░░     ░   ░  ░  ░   ░  ░░   ░  ░    ░  ░\n"
-	@printf "       ░    ▒           ░  ▒   ______   ░     ░      ░░\n"
-	@printf "       ░    ▒           ░   .-|      |-.      ░      ░░\n"
-	@printf "       ░    ▒           ░  /            \     ░        \n"
-	@printf "       ░    ▒  _        ░ |              |    ░     _  \n"
-	@printf "       ░    ▒ ( \       ░ |,  .-.  .-.  ,|    ░    / ) \n"
-	@printf "       ░    ▒  > +=._     | )(__/  \__)( |     _.=+ <  \n"
-	@printf "       ░    ▒ (_/+=._+=._ |/     /\     \| _.=+_.=+\_) \n"
-	@printf "            ▒        +=._ (_     ^^     _)+_.=+        \n"
-	@printf "            ▒            +=\__|IIIIII|__/=+            \n"
-	@printf "            ▒           _.=+| \IIIIII/ |+=._           \n"
-	@printf "            ▒ _     _.=+_.=+\          /+=._+=._     _ \n"
-	@printf "            ▒( \_.=+_.=+     \________/     +=._+=._/ )\n"
-	@printf "              > _.=+                            +=._ < \n"
-	@printf "             (_/                                    \_)\n"
-	@echo "\033[0m"
 
+# @echo "\033[1m\033[35m"
+# @printf " ███▄ ▄███▓ ██▓ ███▄    █  ██▓  ██████  ██░ ██ ▓█████  ██▓     ██▓    \n"
+# @sleep 0.3;
+# @printf "▓██▒▀█▀ ██▒▓██▒ ██ ▀█   █ ▓██▒▒██    ▒ ▓██░ ██▒▓█   ▀ ▓██▒    ▓██▒    \n"
+# @sleep 0.3;
+# @printf "▓██    ▓██░▒██▒▓██  ▀█ ██▒▒██▒░ ▓██▄   ▒██▀▀██░▒███   ▒██░    ▒██░    \n"
+# @sleep 0.3;
+# @printf "▒██    ▒██ ░██░▓██▒  ▐▌██▒░██░  ▒   ██▒░▓█ ░██ ▒▓█  ▄ ▒██░    ▒██░    \n"
+# @sleep 0.3;
+# @printf "▒██▒   ░██▒░██░▒██░   ▓██░░██░▒██████▒▒░▓█▒░██▓░▒████▒░██████▒░██████▒\n"
+# @sleep 0.3;
+# @printf "░ ▒░   ░  ░░▓  ░ ▒░   ▒ ▒ ░▓  ▒ ▒▓▒ ▒ ░ ▒ ░░▒░▒░░ ▒░ ░░ ▒░▓  ░░ ▒░▓  ░\n"
+# @sleep 0.3;
+# @printf "░  ░   ░  ░ ▒ ░░ ░░   ░ ▒░ ▒ ░░ ░▒  ░ ░ ▒ ░▒░ ░ ░ ░  ░░ ░ ▒  ░░ ░ ▒  ░\n"
+# @sleep 0.3;
+# @printf "░      ░    ▒ ░   ░   ░ ░  ▒ ░░  ░  ░   ░  ░░ ░   ░  ░░ ░ ░     ░ ░   \n"
+# @sleep 0.3;
+# @printf "       ░    ▒           ░  ▒ ░░     ░   ░  ░  ░   ░  ░░   ░  ░    ░  ░\n"
+# @printf "       ░    ▒           ░  ▒   ______   ░     ░      ░░\n"
+# @printf "       ░    ▒           ░   .-|      |-.      ░      ░░\n"
+# @printf "       ░    ▒           ░  /            \     ░        \n"
+# @printf "       ░    ▒  _        ░ |              |    ░     _  \n"
+# @printf "       ░    ▒ ( \       ░ |,  .-.  .-.  ,|    ░    / ) \n"
+# @printf "       ░    ▒  > +=._     | )(__/  \__)( |     _.=+ <  \n"
+# @printf "       ░    ▒ (_/+=._+=._ |/     /\     \| _.=+_.=+\_) \n"
+# @printf "            ▒        +=._ (_     ^^     _)+_.=+        \n"
+# @printf "            ▒            +=\__|IIIIII|__/=+            \n"
+# @printf "            ▒           _.=+| \IIIIII/ |+=._           \n"
+# @printf "            ▒ _     _.=+_.=+\          /+=._+=._     _ \n"
+# @printf "            ▒( \_.=+_.=+     \________/     +=._+=._/ )\n"
+# @printf "              > _.=+                            +=._ < \n"
+# @printf "             (_/                                    \_)\n"
+# @echo "\033[0m"
 $(NAME) : $(OBJ) $(LIBFT)
 	$(CC) $(FLAGS) $(LIB) $(OBJ) -o $(NAME)
 
