--- a/Minishell_Hootgame/Makefile
+++ b/Minishell_Hootgame/Makefile
@@ -6,7 +6,7 @@
 #    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/03/28 18:43:22 by reben-ha         ###   ########.fr        #
+#    Updated: 2023/03/28 22:42:54 by reben-ha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME = minishell
 
 CC = gcc -g
 
-FLAGS = -Wall -Werror -Wextra
+FLAGS = #-Wall -Werror -Wextra
 
 SRC = ./01.Main/minishell.c \
 	./02.Lexer/lexer.c \
