--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
 	"files.associations": {
 		"minishell.h": "c",
-		"const.h": "c"
+		"const.h": "c",
+		"signal.h": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
