--- a/Minishell_Hootgame/Makefile
+++ b/Minishell_Hootgame/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ebennamr <ebennamr@student.42.fr>          +#+  +:+       +#+         #
+#    By: reben-ha <reben-ha@student.1337.ma>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/25 14:30:49 by ebennamr          #+#    #+#              #
-#    Updated: 2023/04/05 14:40:14 by ebennamr         ###   ########.fr        #
+#    Updated: 2023/04/05 20:53:34 by reben-ha         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
